# kang

./: README.md  example.py  pyproject.toml
kang/: __init__.py  core.py  db.py  family.py  serialization.py
kang/sql/: get-facts.sql  insert-fact.sql  insert-transaction.sql  schema.sql  verify-schema.sql
tests/: test_db.py  test_family.py  test_kang.py
